--- a/overview/introduction.html
+++ b/overview/introduction.html
@@ -4,15 +4,16 @@
   <template $exist="language == 'zh-cn'">
       <h3 class="question">dagger.js是什么</h3>
       <div class="answer">
-        <span>dagger.js是一个基于html的开源（<a target="_blank" href="https://opensource.org/licenses/MIT">MIT</a>）web前端技术框架。在dagger.js的帮助下，你可以轻松地使用原生javaScript语法构建网站（无论是单页应用还是简单的动态页面）。</span>
+        <div>dagger.js是一个基于html的开源（<a target="_blank" href="https://opensource.org/licenses/MIT">MIT</a>）web前端技术框架。</div>
+        <div>在dagger.js的帮助下，您无需依赖繁琐的构建过程就可以轻松完成网站（无论是单页应用还是普通动态网站）前端页面的开发工作。</div>
       </div>
       <h3 class="question">dagger.js适合哪些开发者</h3>
-      <div class="answer">
-        <span>无论你是一个有经验的专业开发人员还是对web前端开发领域感兴趣的业余爱好者，只要有原生<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML">html</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript">javaScript</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">css</a>背景知识作为基础，都可以在短时间内理解和掌握dagger.js。</span>
-      </div>
+      <div class="answer">无论您是一个富有经验的专业开发人员，还是对web前端开发领域感兴趣的业余爱好者，只要具备原生<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML">html</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript">javaScript</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">css</a>背景知识作为基础，都可以在短时间内理解和掌握dagger.js。</div>
       <h3 class="question">学习路线</h3>
       <div class="answer">
-        <span>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="directive/scope">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。本文档围绕以上概念组织章节结构，在每个章节内都提供了与内容关联的使用示例。现在让我们开始dagger.js的体验之旅吧。</span>
+        <div>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="directive/scope">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。</div>
+        <div>本文档围绕以上概念来组织章节结构。为便于您更加直观地理解和体验dagger.js，我们在各章节内提供了相关内容的示例代码，您可以随意修改和执行示例代码以进行练习。</div>
+        现在让我们一起开始dagger.js的体验之旅吧！
       </div>
     </div>
   </template>
