--- a/directive/lifeCycle.html
+++ b/directive/lifeCycle.html
@@ -2,7 +2,7 @@
   <h2>${ $['directive.lifeCycle'] }</h2>
   <div class="content">
     <h3 class="question">什么是生命周期指令</h3>
-    <div class="answer">生命周期指令是在宿主元素创建或销毁阶段触发执行的一组指令的统称。</div>
+    <div class="answer">生命周期指令是在宿主元素的创建或销毁阶段触发执行的一组指令的统称。</div>
     <h3 class="question">生命周期指令列表</h3>
     <div class="answer"><a class="margin" href="directive/loading">+loading</a><a class="margin" href="directive/loaded">+loaded</a><a class="margin" href="directive/unloading">+unloading</a><a class="margin" href="directive/unloaded">+unloaded</a><a class="margin" href="directive/sentry">+sentry</a></div>
     <h3 class="question">哪些元素可以定义生命周期指令</h3>
