--- a/directive/loaded.html
+++ b/directive/loaded.html
@@ -2,9 +2,12 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+loaded指令的作用</h3>
-    <div class="answer">“+loaded”指令在宿主元素挂载到DOM树之后（加载完成阶段）由框架触发调用，主要用于对宿主元素和作用域变量进行初始化，其表达式计算结果无意义。</div>
+    <div class="answer">
+      <div>“+loaded”指令在宿主元素挂载到DOM树之后（加载完成阶段）由框架触发调用，主要用于对宿主元素和作用域变量进行初始化操作。</div>
+      <div>dagger.js不会对“+loaded”指令表达式的计算结果进行后续处理。</div>
+    </div>
     <h3 class="question">+loaded指令示例</h3>
-    <div class="answer">下面我们来看一个+loaded指令的演示示例。</div>
+    <div class="answer">下面我们来看一个+loaded指令的示例。</div>
     <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loaded directive" src="https://codepen.io/dagger8224/embed/MWQbEKR?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
       See the Pen <a href="https://codepen.io/dagger8224/pen/MWQbEKR">
       [dagger-demo] +loaded directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
