--- a/directive/controller.html
+++ b/directive/controller.html
@@ -2,13 +2,27 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是控制指令</h3>
-    <div class="answer">控制指令是当作用域下数据发生变化时由框架触发执行的一组指令的统称。您可以把控制指令理解为具有动态响应能力的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Attributes">元素属性</a>。</div>
+    <div class="answer">
+      <div>控制指令是当作用域下数据发生变化时由框架触发执行的一组指令的统称。</div>
+      <div>您可以把控制指令理解为具有动态响应能力的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Attributes">元素属性</a>。</div>
+    </div>
     <h3 class="question">控制指令实例列表</h3>
     <div class="answer"><a class="margin" href="directive/checked">$checked</a><a class="margin" href="directive/class">$class</a><a class="margin" href="directive/each">$each</a><a class="margin" href="directive/exist">$exist</a><a class="margin" href="directive/file">$file</a><a class="margin" href="directive/focus">$focus</a><a class="margin" href="directive/html">$html</a><a class="margin" href="directive/result">$result</a><a class="margin" href="directive/selected">$selected</a><a class="margin" href="directive/style">$style</a><a class="margin" href="directive/text">$text</a><a class="margin" href="directive/value">$value</a><a class="margin" href="directive/watch">$watch</a><a class="margin" href="directive/boolean">布尔指令</a><a class="margin" href="directive/general">一般指令</a></div>
-    <h3 class="question">控制指令的触发条件</h3>
-    <div class="answer">控制指令将在宿主元素进入加载完成阶段后触发（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）。如果计算指令表达式所依赖的作用域字段的值发生变化，控制指令在宿主元素的生存期内可能会多次触发更新。</div>
     <h3 class="question">控制指令的宿主元素</h3>
     <div class="answer">除去文档中特别说明的情况之外，控制指令可应用于除html标签外的所有元素。</div>
+    <h3 class="question">控制指令的触发条件</h3>
+    <div class="answer">
+      <div>控制指令（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）将在宿主元素进入加载完成阶段后由框架触发执行。</div>
+      <div>如果指令表达式计算过程所依赖的作用域字段的值发生变化，控制指令在宿主元素的生存期内可能会多次触发更新。这个机制称为控制指令对作用域变量的响应依赖。</div>
+    </div>
+    <h3 class="question">控制指令示例</h3>
+    <div class="answer">下面的例子演示了控制指令和作用域变量之间的响应依赖关系。
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] responsive dependency" src="https://codepen.io/dagger8224/embed/PoQmegw?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/PoQmegw">
+        [dagger-demo] responsive dependency</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
   </template>
   <template $exist="language == 'en-us'">
     <template $each="$['directive.controller.sections']">
