--- a/directive/unloaded.html
+++ b/directive/unloaded.html
@@ -2,9 +2,12 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+unloaded指令的作用</h3>
-    <div class="answer">“+unloaded”指令在宿主元素从DOM树移除之后（卸载完成阶段）由框架触发调用，用于完成进一步的清理工作，其表达式计算结果无意义。</div>
+    <div class="answer">
+      <div>“+unloaded”指令在宿主元素从DOM树移除之后（卸载完成阶段）由框架触发调用，用于完成进一步的清理工作。</div>
+      <div>dagger.js不会对“+unloaded”指令表达式的计算结果进行后续处理。</div>
+    </div>
     <h3 class="question">+unloaded指令示例</h3>
-    <div class="answer">下面我们来看一个+unloaded指令的演示示例。</div>
+    <div class="answer">下面我们来看一个+unloaded指令的示例。</div>
     <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +unloaded directive" src="https://codepen.io/dagger8224/embed/PoQbQbQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
       See the Pen <a href="https://codepen.io/dagger8224/pen/PoQbQbQ">
       [dagger-demo] +unloaded directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
