--- a/directive/each.html
+++ b/directive/each.html
@@ -3,11 +3,11 @@
     <template $exist="language == 'zh-cn'">
       <h3 class="question">$each指令的作用</h3>
       <div class="answer">$each指令用于循环渲染具有相同视图模板的数组，对象，或者其他<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Iteration_protocols">可迭代变量</a>。</div>
-      <h3 class="question">$each指令的宿主元素</h3>
-      <div class="answer">$each指令的真正宿主元素实际上是其名义宿主元素的“虚拟父元素”，时序上，$each指令表达式将先于其定义元素上所有的生命周期方法和其他控制指令执行。</div>
+      <h3 class="question">$each指令的触发顺序</h3>
+      <div class="answer">$each指令将先于其宿主元素上所有的生命周期方法和其他控制指令执行。</div>
       <h3 class="question">$each指令表达式的执行结果</h3>
       <div class="answer">
-        <div>当$each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的作用域变量。每个作用域变量下定义了如下几个字段：</div>
+        <div>当$each指令的计算结果是一个可迭代数据结构时，框架会以其宿主元素（包含其子级元素）作为模板循环渲染出多个元素实例，并基于循环体内容为每个元素实例创建一个新的作用域变量。这个新的作用域变量下定义了如下几个字段：</div>
         <div class="margin">“item”，循环体子项数据内容</div>
         <div class="margin">“index”，整数类型，子项数据在循环体中的索引</div>
         <div class="margin">“key”，字符串类型，子项数据在父级数据中的字段名</div>
