--- a/directive/each.html
+++ b/directive/each.html
@@ -28,7 +28,7 @@
         </iframe>
       </div>
       <h3 class="question">$each嵌套使用示例</h3>
-      <div class="answer">不同宿主元素上定义的$each指令可以嵌套使用，下面是一个例子：
+      <div class="answer">不同宿主元素上声明的$each指令可以嵌套使用，下面是一个例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/ZErLJxo?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/ZErLJxo">
           Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
