--- a/directive/controller.html
+++ b/directive/controller.html
@@ -12,8 +12,8 @@
     <div class="answer">除去文档中特别说明的情况之外，控制指令可应用于除html标签外的所有元素。</div>
     <h3 class="question">控制指令的触发条件</h3>
     <div class="answer">
-      <div>控制指令（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）将在宿主元素进入加载完成阶段后由框架触发执行。</div>
-      <div>如果指令表达式计算过程所依赖的作用域字段的值发生变化，控制指令在宿主元素的生存期内可能会多次触发更新。这个机制称为控制指令对作用域变量的响应依赖。</div>
+      <div>控制指令（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）将在宿主元素进入加载完成阶段后首次触发执行。</div>
+      <div>在宿主元素的生存周期内，如果指令表达式计算过程所依赖的作用域字段的值发生变化，控制指令可能会多次触发更新。这个机制称为控制指令对作用域变量的响应依赖。</div>
     </div>
     <h3 class="question">控制指令示例</h3>
     <div class="answer">下面的例子演示了控制指令和作用域变量之间的响应依赖关系。
