--- a/overview/introduction.html
+++ b/overview/introduction.html
@@ -5,7 +5,7 @@
       <h3 class="question">dagger.js是什么</h3>
       <div class="answer">
         <div>dagger.js是一个基于html的开源（<a target="_blank" href="https://opensource.org/licenses/MIT">MIT</a>）web前端技术框架。</div>
-        <div>在dagger.js的帮助下，您无需依赖繁琐的构建过程就可以轻松完成网站（无论是单页应用还是普通动态网站）前端页面的开发工作。</div>
+        <div>在dagger.js的帮助下，您无须依赖任何第三方工具或代码就可以轻松完成网站（无论是单页应用还是普通动态网站）前端页面的开发工作。</div>
       </div>
       <h3 class="question">dagger.js适合哪些开发者</h3>
       <div class="answer">无论您是一个富有经验的专业开发人员，还是对web前端开发领域感兴趣的业余爱好者，只要具备原生<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML">html</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript">javaScript</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">css</a>背景知识作为基础，都可以在短时间内理解和掌握dagger.js。</div>
