--- a/directive/html.html
+++ b/directive/html.html
@@ -1,35 +1,29 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./html_demo.html",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['directive.html'] }</h2>
-    <div class="content">
-      <template $each="$['directive.html.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['directive.html'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">$html指令的作用</h3>
+    <div class="answer">$html指令用于在宿主元素下动态创建子级元素。</div>
+    <h3 class="question">$html指令表达式的执行结果</h3>
+    <div class="answer">
+      <div>指令表达式的执行结果是字符串，dagger.js在表达式执行完成后将结果内容转换为宿主元素的子级元素。</div>
+      <div>您同样可以在这些动态创建出的元素上声明各种指令，这些指令表达式中的作用域对象默认指向$html宿主元素的作用域。</div>
+      <div>如果有需要，您也可以在动态元素上继续声明$html指令来创建新的动态节点。</div>
+    </div>
+    <h3 class="question">$html指令的使用场景</h3>
+    <div class="answer">$html指令通常与<a href="router/introduction">路由配置项</a>结合使用，在路由发生切换时动态更新视图内容。</div>
+    <h3 class="question">$html指令的示例</h3>
+    <div class="answer">下面我们来看$html的示例。
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $html directive" src="https://codepen.io/dagger8224/embed/vYdZKgx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/vYdZKgx">
+        [dagger-demo] $html directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['directive.html.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
