--- a/directive/selected.html
+++ b/directive/selected.html
@@ -1,35 +1,49 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./selected_demo.html",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['directive.selected'] }</h2>
-    <div class="content">
-      <template $each="$['directive.selected.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['directive.selected'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">$selected指令的作用</h3>
+    <div class="answer">$selected指令用于绑定宿主元素的选中值，适用于类型为“radio”和“checkbox”的input元素，以及select元素。</div>
+    <h3 class="question">$selected指令表达式的执行结果</h3>
+    <div class="answer">
+      <div>对于radio元素，当$selected指令表达式的执行结果与宿主元素的value相等时，宿主元素被选中。看下面的例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $selected directive (radio)" src="https://codepen.io/dagger8224/embed/OJQgWZZ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/OJQgWZZ">
+          [dagger-demo] $selected directive (radio)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+      <div>对于checkbox元素，当$selected指令表达式的执行结果为包含宿主元素value的数组时，宿主元素被选中。看下面的例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $selected directive (checkbox)" src="https://codepen.io/dagger8224/embed/vYdZzZr?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/vYdZzZr">
+          [dagger-demo] $selected directive (checkbox)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+      <div>对于单选下拉框元素，当$selected指令表达式的执行结果与宿主元素下选项的value相等时，此选项元素被选中。看下面的例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/ZEryMLQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/ZEryMLQ">
+          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+      <div>对于复选列表框元素，当$selected指令表达式的执行结果为包含宿主元素下选项value的数组时，此选项元素被选中。看下面的例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/xxYradr?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/xxYradr">
+          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+      <div>当$selected指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与DOM元素属性之间的的双向绑定。</div>
+    <h3 class="question">$selected指令与$checked指令的关系</h3>
+    <div class="answer">
+      <div>$selected指令绑定到选中项的值，而$checked指令绑定的是宿主元素的选中状态。</div>
+      <div>请注意，不要在一个元素上同时声明$selected指令和$checked指令，否则可能导致元素的选中状态与数据不一致。</div>
     </div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['directive.selected.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
