--- a/directive/text.html
+++ b/directive/text.html
@@ -1,35 +1,26 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./text_demo.html",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['directive.text'] }</h2>
-    <div class="content">
-      <template $each="$['directive.text.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['directive.text'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">$text指令的作用</h3>
+    <div class="answer">$text指令用于在宿主元素下动态创建文本内容。</div>
+    <h3 class="question">$text指令表达式的执行结果</h3>
+    <div class="answer">指令表达式的执行结果为字符串。</div>
+    <h3 class="question">$text指令与模板字符串的关系</h3>
+    <div class="answer">
+      <div>在示例中我们多次使用过模板字符串来展示执行结果，您可以将它理解为其父元素上声明的一个“匿名”的$text指令。</div>
+      <div>如果宿主元素下既有动态文本内容又包含其他子元素，那么您需要使用模板字符串而不能使用$text指令。我们来看一个例子：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/poawxye?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/poawxye">
+          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
     </div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['directive.text.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
